--- a/src/content/docs/docs/faqs.mdx
+++ b/src/content/docs/docs/faqs.mdx
@@ -36,9 +36,8 @@ sidebar:
     Yes, definitely. If you want to simulate a target environment by running a
     container hosting emulator like [Docker
     Desktop](https://www.docker.com/products/docker-desktop/) on your macOS
-    machine, check out this [short
-    guide](/docs/guides/distr-on-macos/). It covers the
-    configuration steps needed to ensure Distr can communicate with the Docker
-    daemon.
+    machine, check out this [short guide](/docs/guides/distr-on-macos/). It
+    covers the configuration steps needed to ensure Distr can communicate with
+    the Docker daemon.
   </p>
 </details>
