--- a/src/content/docs/docs/guides/getting-started/deployment.mdx
+++ b/src/content/docs/docs/guides/getting-started/deployment.mdx
@@ -38,8 +38,8 @@ After selecting a customer, choose the Docker application and version you want t
 <Aside type="tip">
   If an application doesn't appear in the list, it may be because: - The
   customer doesn't have a license for that application - You need to create an
-  [application license](/docs/guides/application-licenses/)
-  and assign it to the customer first
+  [application license](/docs/guides/application-licenses/) and assign it to the
+  customer first
 </Aside>
 
 ### Step 3: Deployment Configuration
@@ -97,8 +97,8 @@ After selecting a customer, choose the Helm application and version you want to 
 <Aside type="tip">
   If an application doesn't appear in the list, it may be because: - The
   customer doesn't have a license for that application - You need to create an
-  [application license](/docs/guides/application-licenses/)
-  and assign it to the customer first
+  [application license](/docs/guides/application-licenses/) and assign it to the
+  customer first
 </Aside>
 
 ### Step 3: Deployment Configuration
