feat: add automatic deployment guide (#229)
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/faqs.mdx
+++ b/src/content/docs/docs/faqs.mdx
@@ -18,14 +18,13 @@ sidebar:
 <details>
   <summary>Can I toggle between Vendor and Customer portal?</summary>
   <p>
-    {' '}
     No, there is no way to toggle between the Vendor and Customer views. If a
     vendor wants to manage their own deployments, they can do so using the
     Deployments tab within the Vendor Portal. The Customer Portal is only
     accessible to end-customers who have been onboarded by a software vendor.
     After onboarding, the customer will receive an email to set their
     credentials. Once the credentials are set, the end-customer can access the
-    Customer Portal.{' '}
+    Customer Portal.
   </p>
 </details>
 
@@ -34,12 +33,11 @@ sidebar:
     Can I simulate a target environment on a MacOS machine for testing purposes?
   </summary>
   <p>
-    {' '}
     Yes, definitely. If you want to simulate a target environment by running a
     container hosting emulator like [Docker
     Desktop](https://www.docker.com/products/docker-desktop/) on your macOS
     machine, check out this [short guide](/docs/guides/distr-on-macos/). It
     covers the configuration steps needed to ensure Distr can communicate with
-    the Docker daemon.{' '}
+    the Docker daemon.
   </p>
 </details>
