--- a/src/content/docs/docs/guides/configuration/docker-env.mdx
+++ b/src/content/docs/docs/guides/configuration/docker-env.mdx
@@ -1,6 +1,7 @@
 ---
 title: Configure Docker Environment Variables
 description: Create customizable environment variable templates for your Docker applications and let customers configure them before deployment.
+slug: docs/guides/docker-env-var-template
 sidebar:
   order: 4
 ---
