--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -16,7 +16,7 @@ Start with these essential guides to set up your first applications and customer
 - **[Create Application](/docs/guides/application/)** - Create Docker and Helm applications, add versions, and manage application templates
 - **[Create a Deployment](/docs/guides/deployment/)** - Deploy applications to customer environments using the updated deployment flow
 - **[Onboarding a New Customer](/docs/product/rbac/#inviting-customer-organization-users)** - Create customer accounts and grant access to your software
-- **[How to Set Up and Use the Registry](/docs/guides/container-registry/)** - Configure your registry and start distributing software
+- **[Container Registry](/docs/guides/container-registry/)** - Configure your registry and start distributing software
 
 ## Configuration & Customization
 
@@ -25,6 +25,12 @@ Configure your applications and customize the deployment experience:
 - **[Configure Docker Environment Variables](/docs/guides/docker-env-var-template/)** - Create customizable environment variable templates for Docker apps
 - **[Configure Application Links](/docs/guides/application-links/)** - Create dynamic links to deployed applications using template variables
 - **[Configuring Helm Charts for Distr](/docs/guides/helm-chart-registry-auth/)** - Set up authenticated image pulls with imagePullSecrets
+
+## Automation & CI/CD
+
+Automate your deployment pipeline with continuous integration and delivery:
+
+- **[Automatic Deployments from GitHub](/docs/guides/automatic-deployments-from-github/)** - Automatically create versions and update all customer deployments on every release
 
 ## Customer Management
 
