chore: update distr organization name
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/blog/container-image-registry-comparison.mdx
+++ b/src/content/blog/container-image-registry-comparison.mdx
@@ -319,7 +319,7 @@ This is where purpose-built external registries like Distr come in, addressing t
 
 [Distr](/) comes with an OCI-compliant [artifact registry](/docs/product/registry/) natively built into the platform.
 
-Distr itself is [fully open source on GitHub](https://github.com/glasskube/distr/) and can be self-hosted.
+Distr itself is [fully open source on GitHub](https://github.com/distr-sh/distr/) and can be self-hosted.
 It not only features a [vendor portal](/docs/product/vendor-portal/) that allows software and AI companies to manage their artifacts,
 invite end customers, and manage their licenses and access policies to specific tags of an image or version of an application.
 
