--- a/src/content/blog/distr-docker-swarm.mdx
+++ b/src/content/blog/distr-docker-swarm.mdx
@@ -17,7 +17,7 @@ tags:
 ---
 
 I am Jakob—an engineer working at Glasskube, which helps [software and AI companies](/glossary/isv-meaning/) distribute their applications to [self-managed environments](/glossary/self-managed-software/).
-We build an Open Source Software Distribution platform called Distr ([`github.com/glasskube/distr`](https://github.com/glasskube/distr)).
+We build an Open Source Software Distribution platform called Distr ([`github.com/distr-sh/distr`](https://github.com/distr-sh/distr)).
 
 If you've ever thought that **Docker Compose** is too basic for your deployment needs, but a full **[Kubernetes](/glossary/kubernetes/)** setup feels like overkill, you're definitely not alone.
 
