--- a/src/content/blog/distr-docs.mdx
+++ b/src/content/blog/distr-docs.mdx
@@ -21,7 +21,7 @@ tags:
 
 I am Philip—an engineer working at Glasskube. We are building an Open Source control plane for self-managed, BYOC, and on-prem deployments.
 Everything you need to distribute applications to self-managed customers out of the box is called Distr
-([`github.com/glasskube/distr`](https://github.com/glasskube/distr)).
+([`github.com/distr-sh/distr`](https://github.com/distr-sh/distr)).
 
 We previously built all our technical documentation—including this website—with Docusaurus.
 We generally liked using a static page generator and having all content fully Open Source on GitHub, so everyone can create a pull request
@@ -177,7 +177,7 @@ We used `/docs`, for example.
 Starlight, on the other hand, is _only_ built for documentation and not for marketing pages.
 It even took an ugly hack to make sure the default path is `/docs` and not `/`.
 
-Please don't look at this custom script configured in our [`astro.config.mjs`](https://github.com/glasskube/distr.sh/blob/main/astro.config.mjs#L23)
+Please don't look at this custom script configured in our [`astro.config.mjs`](https://github.com/distr-sh/distr.sh/blob/main/astro.config.mjs#L23)
 we need to execute on every page to make sure that the redirection works properly:
 
 ```json
