--- a/src/content/docs/docs/index.mdx
+++ b/src/content/docs/docs/index.mdx
@@ -11,7 +11,7 @@ hero:
       link: /docs/
       icon: right-arrow
     - text: View on GitHub
-      link: https://github.com/glasskube/distr
+      link: https://github.com/distr-sh/distr
       icon: github
       variant: minimal
 ---
