--- a/src/content/blog/2025-02-17-distr-v1-release.mdx
+++ b/src/content/blog/2025-02-17-distr-v1-release.mdx
@@ -15,11 +15,11 @@ tags:
   - Releases
 ---
 
-The inaugural release of [Distr](https://github.com/glasskube/distr) v1.0 shipped just a little over a week ago, and we're already back with a minor update that packs major features! These updates expand Distr's functionality in valuable ways, making it an even more powerful tool for your software distribution needs.
+The inaugural release of [Distr](https://github.com/distr-sh/distr) v1.0 shipped just a little over a week ago, and we're already back with a minor update that packs major features! These updates expand Distr's functionality in valuable ways, making it an even more powerful tool for your software distribution needs.
 
 ### 1. Feature: GitHub Release Action
 
-This action creates a new version of a [Distr](https://github.com/glasskube/distr) application, fully automating the software release lifecycle.
+This action creates a new version of a [Distr](https://github.com/distr-sh/distr) application, fully automating the software release lifecycle.
 
 - **Why it matters:** Say goodbye to manual steps! With this action, you can ship new docker and helm bases application versions automatically from end to end, making them instantly available on Distr for deployment. It's all about tying the loose ends of your CI/CD workflow, saving you time and effort.
 
@@ -49,7 +49,7 @@ To take advantage of all new features in Distr v1.1, here's what you need to do 
 
 - If you're running an older agent version, click update agent via the deployment web UI to ensure compatibility with the latest improvements.
 
-If you are self-hosting Distr make sure to check out our [changelog](https://github.com/glasskube/distr/blob/main/CHANGELOG.md).
+If you are self-hosting Distr make sure to check out our [changelog](https://github.com/distr-sh/distr/blob/main/CHANGELOG.md).
 
 ### What's Coming Next
 
