--- a/src/content/docs/docs/self-hosting/feature-flags.mdx
+++ b/src/content/docs/docs/self-hosting/feature-flags.mdx
@@ -5,6 +5,8 @@ sidebar:
   order: 4
 ---
 
+import {Aside} from '@astrojs/starlight/components';
+
 Distr uses a primitive approach on feature management.
 As long as a feature is not general available or we don't think that is should be activated by default, it is hidden behind a feature flag.
 Feature flags are just an array in the postgres database.
@@ -13,5 +15,10 @@ All feature types can be found in [`types.go`](https://github.com/distr-sh/distr
 If you want to enable a feature for an organization, you can do this by running the following command in your postgres database:
 
 ```sql
- update organization set features ='{licensing}' where id = 'your-organization-id';
+ update organization set features ='{pre_post_scripts}' where id = 'your-organization-id';
 ```
+
+<Aside type="caution">
+  Distr Pro feature flags will be reseted on application start and require the
+  Distr Enterprise license.
+</Aside>
