--- a/src/content/docs/docs/self-hosting/feature-flags.mdx
+++ b/src/content/docs/docs/self-hosting/feature-flags.mdx
@@ -19,6 +19,6 @@ If you want to enable a feature for an organization, you can do this by running 
 ```
 
 <Aside type="caution">
-  Distr Pro feature flags will be reseted on application start and require the
+  Distr Pro feature flags will be reset on application start and require the
   Distr Enterprise license.
 </Aside>
