feat: add embedded whitepaper cta
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/glossary/air-gapped-meaning.mdx
+++ b/src/content/glossary/air-gapped-meaning.mdx
@@ -4,6 +4,8 @@ slug: air-gapped-meaning
 description: 'Understanding air-gapped systems, networks, and environments—and how to distribute software to them'
 ---
 
+import EmbeddedWhitePaperCta from '~/components/cta/embedded/EmbeddedWhitePaperCta.astro';
+
 ## What is Air-Gapped? (Air Gap Meaning)
 
 **Air-gapped** (also written as **air gapped**, **air-gapped**, or **airgapped**) refers to a computer system, network, or device that is physically or logically isolated from unsecured networks—including the internet and untrusted local networks. This isolation creates a literal "air gap" between secure systems and potential threats, preventing unauthorized remote access, data exfiltration, and cyberattacks.
@@ -132,6 +134,8 @@ Air-gapped systems operate on a fundamental principle: **what isn't connected ca
 - Regular security scanning using offline update databases
 
 ---
+
+<EmbeddedWhitePaperCta />
 
 ## Air-Gapped Network Attack Vectors
 
@@ -270,6 +274,8 @@ The traditional definition of air-gapping (physical disconnection) conflicts wit
 
 ---
 
+<EmbeddedWhitePaperCta />
+
 ## Distributing Software to Air-Gapped Environments
 
 For software vendors and [ISVs](/glossary/isv-meaning/), air-gapped customers present unique distribution challenges. These customers can't simply "download updates" or connect to your SaaS platform—they need completely offline delivery mechanisms.
@@ -354,6 +360,8 @@ Air-gapping isn't just for spy agencies—many industries rely on isolated syste
 - Proprietary algorithm development
 
 ---
+
+<EmbeddedWhitePaperCta />
 
 ## Challenges in Managing Air-Gapped Environments
 
@@ -440,6 +448,8 @@ Organizations implementing air-gapped systems should follow these principles:
 - Video recording of data transfer operations
 
 ---
+
+<EmbeddedWhitePaperCta />
 
 ---
 
