--- a/src/content/glossary/software-distribution-platform.mdx
+++ b/src/content/glossary/software-distribution-platform.mdx
@@ -4,6 +4,8 @@ slug: software-distribution-platform
 description: 'Complete guide to software distribution platforms: what they are, vendor-to-customer vs IT admin tools, key features, distribution methods for on-premises, air-gapped, BYOC, and self-managed customer deployments.'
 ---
 
+import EmbeddedWhitePaperCta from '~/components/cta/embedded/EmbeddedWhitePaperCta.astro';
+
 ## What is a Software Distribution Platform?
 
 A **software distribution platform** is a technology solution that enables software vendors to distribute, deploy, and manage software applications across diverse customer environments. Unlike simple file hosting or download services, software distribution platforms provide specialized infrastructure for distributing software to customer-controlled environments including [on-premises](/glossary/on-premises-definition/) data centers, customer cloud accounts (BYOC), [air-gapped](/glossary/air-gapped-meaning/) networks, edge locations, and hybrid environments.
@@ -195,6 +197,8 @@ Deployment tools (Helm, Terraform, Ansible) automate installation and configurat
 ### Software Distribution Platform vs Marketplace Platform
 
 Marketplace platforms (AppDirect, CloudBlue) focus on reseller ecosystems, billing, and storefronts. Distribution platforms focus on technical delivery to customer infrastructure. Some platforms combine both.
+
+<EmbeddedWhitePaperCta />
 
 ## Benefits of Software Distribution Platforms
 
